[metadata]
name = cmpbayes
version = 0.0.1
description = Tools to perform Bayesian data analysis on algorithm run results
long_description = file: README.md
author = David Pätzel
author_email = david.paetzel@posteo.de
url = https://github.com/dpaetzel/cmpbayes
classifiers  =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
install_requires =
  numpy ==1.21.5
  pystan ==3.4.0
  pandas ==1.3.5
extra_requires =
  arviz ==0.11.4
  matplotlib ==3.5.1

[options]
package_dir  =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
